add beer ordershipment assignment
